--- a/style.css
+++ b/style.css
@@ -1,36 +1,201 @@
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        color: #fff;
-      }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: #fff;
+  }
 body{
-    background-color: #323d42;
-    font-family: "Roboto Slab";
+background-color: #323d42;
+font-family: "Roboto Slab";
 }
 .Adhemar{
-    font-size: 7;
-    font-family: "Roboto Slab";
+font-size: 7;
+font-family: "Roboto Slab";
 }
 header{
-    background-color: #192428;
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    justify-content: space-between;
+background-color: #192428;
+display: flex;
+align-items: center;
+padding: 20px;
+justify-content: space-between;
 }
 ul{
-    display: flex;
-    margin: 2px;
+display: flex;
+margin: 2px;
 }
 li{
 list-style: none;
 padding: 7px;
 }
 a{
-   text-decoration: none;
+text-decoration: none;
 }
 a:hover{
-    font-size: 1.3rem;
+font-size: 1.3rem;
+transition: 0.5s;
+}
+
+/* Efeito paralax, puro css, esse codigo está uma beleza né? */
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+
+@font-face {
+  font-family: Bebas;
+  src: url('../fonts/BebasKai-Regular.otf');
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  background-color: #000;
+  font-family: Montserrat, Arial, Helvetica, sans-serif;
+  font-weight: 700;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.btn {
+  border: 1.5px solid #fff;
+  border-radius: 0.75rem;
+  padding: 0.75rem 1.25rem;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn:hover {
+  color: #000;
+  background: #fff;
+}
+
+.wrapper {
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  perspective: 300px;
+}
+
+.parallax__group {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  transform-style: preserve-3d;
+}
+
+.parallax__layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.hero-text {
+  background: linear-gradient(
+    rgba(105, 211, 252, 0.25) 0%,
+    rgba(255, 116, 161, 0.25) 86%,
+    rgba(1, 0, 0, 0.25) 100%
+  );
+  background-size: cover;
+  transform: translateZ(0) scale(1);
+  z-index: 4;
+}
+
+.hero-text h2 {
+  font-size: 1.25rem;
+  position: absolute;
+  left: 2.5rem;
+  top: 2.5rem;
+}
+
+.hero-text ul {
+  font-size: 0.75rem;
+  position: absolute;
+  right: 2.5rem;
+  top: 2.5rem;
+}
+
+.hero-text ul li {
+  margin-left: 2.5rem;
+  list-style-type: none;
+  float: left;
+  visibility: hidden;
+}
+
+.hero-text ul li:nth-of-type(3) {
+  visibility: visible;
+}
+
+.year-container {
+  position: absolute;
+  left: 45%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 18rem;
+  height: 19rem;
+}
+
+.year-container h1 {
+  font-family: Bebas, sans-serif;
+  font-weight: 400;
+  position: absolute;
+  font-size: 10rem;
+}
+
+.year-container h1:nth-of-type(1) {
+  top: 4%;
+  right: 100%;
+}
+
+.year-container h1:nth-of-type(2) {
+   top: 5%;
+    left: 0%;
+ 
+}
+
+.year-container h1:nth-of-type(3) {
+  top: 5%;
+  left: 30%;
+}
+
+.year-container h1:nth-of-type(4) {
+  left: 60%;
+  bottom: 34%;
+}
+.year-container h1:nth-of-type(5) {
+    left: 93%;
+    bottom: 35%;
+  }
+  .year-container h1:nth-of-type(6) {
+    left: 140%;
+    bottom: 35%;
+  }
+  .year-container h1:nth-of-type(7) {
+    left: 170%;
+    bottom: 35%;
+  }
+  .grupo_de_itinerários {
+    display: flex;
+    justify-content: space-around;
+    align-items: center; 
+    flex-wrap: wrap; 
+    margin-top: 2rem; 
+}
+
+.biotec {
+    flex: 1;
+    max-width: 200px;
+    text-align: center;
+}
+
+.imagemBio {
+    width: 100%;
     transition: 0.5s;
+}
+
+.imagemBio:hover {
+    width: 110%;
 }
