--- a/style.css
+++ b/style.css
@@ -177,6 +177,14 @@ a {
     left: 170%;
     bottom: 35%;
   }
+
+  /* Se voce mudar uma linha sequer, tudo vai quebrar */
+  /* Página pós paralax, com grupos os três itinenários que temos */
+
+  .introdução{
+    font-size: 3rem;
+    margin-top: 20px;
+  }
   .grupo_de_itinerários {
     display: flex;
     justify-content: space-around;
@@ -198,4 +206,73 @@ a {
 
 .imagemBio:hover {
     width: 110%;
+}
+/* Estilização do footer*/
+
+footer{
+    margin-top: 7rem;
+    margin-left: 1rem;
+}
+
+/* Resposividade de TODA TELA INICIAL*/
+@media (max-width: 768px) {
+    .introdução {
+        font-size: 2rem;
+    }
+    .year-container {
+        position: absolute;
+        left: 22.5%;
+        font-size: 1rem;
+        top: 25%;
+        transform: translate(-50%, -50%);
+        width: 9rem;
+        height: 9.5rem;
+      }
+      
+      .year-container h1 {
+        font-family: Bebas, sans-serif;
+        font-weight: 400;
+        position: absolute;
+        font-size: 10rem;
+      }
+      
+      .year-container h1:nth-of-type(1) {
+        top: 22%;
+        font-size: 6.5rem;
+        right: 50%;
+      }
+      
+      .year-container h1:nth-of-type(2) {
+         top: 22%;
+         font-size: 6.5rem;
+          left: 49%;
+       
+      }
+      
+      .year-container h1:nth-of-type(3) {
+        top: 22%;
+        font-size: 6.5rem;
+        left: 88%;
+      }
+      
+      .year-container h1:nth-of-type(4) {
+        left: 125%;
+        font-size: 6.5rem;
+        bottom: 0%;
+      }
+      .year-container h1:nth-of-type(5) {
+          left: 165%;
+          font-size: 6.5rem;
+          bottom: 0%;
+        }
+        .year-container h1:nth-of-type(6) {
+          left: 225%;
+          font-size: 6.5rem;
+          bottom: 0%;
+        }
+        .year-container h1:nth-of-type(7) {
+          left: 265%;
+          font-size: 6.5rem;
+          bottom: 0%;
+        }
 }
