--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ footer{
     }
     .year-container {
         position: absolute;
-        right: 100%;
+        left: 22.5%;
         font-size: 1rem;
         top: 25%;
         transform: translate(-50%, -50%);
