--- a/style.css
+++ b/style.css
@@ -223,42 +223,37 @@ footer{
 
     .year-container {
         position: relative;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        width: 9rem;
-        height: 9.5rem;
+        width: 100%;
+        max-width: 9rem;
+        height: auto;
+        margin: 0 auto; /* Centraliza horizontalmente */
         display: flex;
-        flex-direction: column;
+        flex-wrap: wrap;
         align-items: center;
         justify-content: center;
+        gap: 0.5rem; /* Espaço entre os elementos */
     }
 
     .year-container h1 {
         font-family: Bebas, sans-serif;
         font-weight: 400;
-        font-size: 10rem;
-        text-align: center;
-        line-height: 1;
-    }
-
-    .year-container h1:nth-of-type(1),
-    .year-container h1:nth-of-type(2),
-    .year-container h1:nth-of-type(3),
-    .year-container h1:nth-of-type(4),
-    .year-container h1:nth-of-type(5),
-    .year-container h1:nth-of-type(6),
-    .year-container h1:nth-of-type(7) {
         font-size: 6.5rem;
+        line-height: 1;
+        text-align: center;
+        flex: 1 1 100%; /* Ocupa a largura total no flex */
     }
 
     .biotec {
         font-size: 0.6rem;
         text-align: center;
+        margin-top: 1rem;
     }
 
     .biotecnologia_texto {
         font-size: 1.8rem;
         text-align: center;
+        margin-top: 1rem;
     }
 }
+
+   
