--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ a {
 .year-container h1:nth-of-type(2) {
    top: 5%;
     left: 0%;
- 
+
 }
 
 .year-container h1:nth-of-type(3) {
@@ -216,36 +216,19 @@ footer{
 
 /* Resposividade de TODA TELA INICIAL*/
 @media (max-width: 768px) {
-    body, html {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh; /* Centraliza verticalmente */
-        text-align: center; /* Centraliza o texto */
-    }
-
-    .introducao {
-        font-size: 2rem;
-    }
-
-    .year-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 0.5rem;
-        max-width: 90vw; /* Limita a largura */
-    }
-
-    .year-container h1 {
-        font-family: Bebas, sans-serif;
-        font-weight: 400;
-        font-size: 6.5rem;
-        margin: 0;
-    }
-
+   .year-container{
+     display: none;
+   }
+   
+  .textoAd{
+    font-size: 4rem;
+   }
+   .nomeadhemar{
+     display: flex;
+     justify-content: center;
+     margin-top:18rem;
+   }
+}
     .biotec {
         font-size: 0.6rem;
     }
@@ -253,4 +236,3 @@ footer{
     .biotecnologia_texto {
         font-size: 1.8rem;
     }
-}
