--- a/biotechstyle.css
+++ b/biotechstyle.css
@@ -21,7 +21,19 @@ a{
     }
 .grupo1{
     display: flex;
+    justify-content: center;
+    flex-direction: column;
     margin-top: 30px;
     font-size: 2rem;
-    margin-left: 10rem;
+}
+.texto{
+  margin-left: 20rem;
+}
+.textotemplate{
+  font-size: 1.5rem;
+  max-width: 65ch;
+}
+.introducao{
+  display: flex;
+  justify-content: center;
 }
