--- a/biotechstyle.css
+++ b/biotechstyle.css
@@ -1,5 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: #fff;
+  }
+
 html,
 body {
+
   width: 100%;
   height: 100%;
   color: #fff;
@@ -7,6 +15,32 @@ body {
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 700;
 }
+.Adhemar{
+    font-size: 7;
+    font-family: "Roboto Slab";
+    }
+    header{
+    background-color: #192428;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    justify-content: space-between;
+    }
+    ul{
+    display: flex;
+    margin: 2px;
+    }
+    li{
+    list-style: none;
+    padding: 5px;
+    }
+    a{
+    text-decoration: none;
+    }
+    a:hover{
+    font-size: 1.3rem;
+    transition: 0.5s;
+    }
 
 a {
   text-decoration: none;
@@ -23,10 +57,10 @@ a{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 100px;
     font-size: 2rem;
 }
-.texto{
+.titulo1{
   margin-left: 20rem;
 }
 .textotemplate{
@@ -37,3 +71,81 @@ a{
   display: flex;
   justify-content: center;
 }
+.titulo2{
+ display: flex;
+ justify-content: center;
+    font-size: 3rem;
+    margin-top: 15rem;
+}
+.tituloDesco{
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
+
+}
+.undertext{
+     display: flex;
+     justify-content: center;
+    font-size: 1.3rem;
+    max-width: 65ch;
+    margin-left: 16rem;
+}
+.red{
+    color: rgb(82, 3, 3);
+}
+.segundaparte{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 3rem;
+}
+.imagensgrupo1{
+    display: flex;
+    justify-content: space-around;
+}
+.imagemvacinas{
+    margin-top: 2rem;
+    width: 40%;
+}
+.imagemvacina2{
+    width: 40%;
+}
+.tituloVaci{ 
+    display: flex;
+    justify-content: center;
+    margin-top: 10rem;
+    font-size: 3rem;
+}
+
+/* Acho que tá claro que é da babino né, acabou virando a base do projeto todo dessa tela aqui, os titulos e tals, me ajudem pfv eu não aguento mais*/
+.balbino{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 120ch;
+}
+.titulobalbino{
+    font-size: 2.3rem;
+    margin-left: 17rem;
+}
+
+ /* a tal da vivh, não sei quem é mas algo me diz que é vitoria, complementa o da balbino*/
+ 
+ .imagemcalendario{
+    width: 50%;
+    margin-left: 20rem;
+ }
+ footer{
+    margin-top: 8rem;
+    margin-left: 2rem;
+    background-color: #000000;
+    display: flex;
+    justify-content: left;
+ }
+ .footertext{
+      font-size: 0.9rem;  
+      padding: 2px;  
+}
+
+/* apartir daqui, responsividade da tela completa, se vc está lendo isso, saiba que Deus foi quem guiou esse codigo, nem sei se vai funcionar de verdade, se sim, obrigado, assindao: mr robot */
+
